--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "swr": "^2.1.3",
     "typescript": "5.0.2"
   },
   "devDependencies": {
