--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "kysely-planetscale": "^1.3.0",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-vertical-timeline-component": "^3.6.0",
@@ -29,6 +30,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
